# zed-dotenv

./: Cargo.toml  Readme.md  extension.toml  flake.nix  release.toml  sc.toml
.github/workflows/: checks.yml  cliff.yml  publish-plugin.yml  release.yml
languages/env/: config.toml
lsp/: Cargo.toml
lsp/src/: main.rs  utils.rs
src/: dotenv-lsp.rs
