[package]
name = "zed-dotenv"
version = "0.0.1"
authors = ["Sergio Ribera <56278796+SergioRibera@users.noreply.github.com>"]
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"
repository = "https://github.com/RustLangES/zed-dotenv"

[lib]
path = "src/dotenv-lsp.rs"
crate-type = ["cdylib"]

[workspace]
members = ["lsp"]

[dependencies]
zed_extension_api = "0.1"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.21.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "RustLangES/homebrew-tap"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Publish jobs to run in CI
publish-jobs = ["homebrew", "./cliff"]
# Whether to install an updater program
install-updater = false
